# snowflake-generic-mcp

./: .env.example  .gitignore  BLOG_POST.md  LICENSE  PUBLISH_TO_GITHUB.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  snowflake_mcp_server.py
examples/: claude_desktop_config.json  cursor_config_mcp.json  setup_snowflake_user.sql
